# ComputerNetworking-SocketProgramming

./: .gitignore  CMakeLists.txt  Makefile  client.html  main.cpp
registry_server/: discovery.js  server.js
server/: Makefile
server/captured_data/: cam_1765728654605.webm
server/modules/: EdgeManager_linux.cpp  KeyManager.hpp
src/: OUTPUT.txt
src/core/: CommandDispatcher.hpp
src/modules/: KeyManager.hpp  ProcessManager.cpp  ProcessManager.hpp  ScreenManager.hpp  ScreenManager_linux.cpp  ScreenManager_win.cpp  SystemManager.hpp  WebcamManager.hpp  WebcamManager_linux.cp
web-client/: angular.json  package-lock.json
web-client/src/: styles.css
web-client/src/app/: app.routes.ts
web-client/src/app/pages/agent-detail/: agent-detail.css  agent-detail.html  agent-detail.ts
web-client/src/app/services/: websocket.service.ts
